<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>no.ssb.klass</groupId>
    <artifactId>klass-root</artifactId>
    <version>4.2.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.7</version>
        <relativePath />
    </parent>

    <modules>
        <module>klass-shared</module>
        <module>klass-api</module>
        <module>klass-mail</module>
    </modules>

    <scm>
        <developerConnection>scm:git:https://github.com/${github.repository}.git</developerConnection>
        <url>https://github.com/${github.repository}</url>
        <tag>v4.0.0</tag>
    </scm>

    <properties>
        <java.version>17</java.version>
        <github.repository>statisticsnorway/klass</github.repository>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <sonar.organization>statisticsnorway</sonar.organization>
        <sonar.projectKey>klass</sonar.projectKey>
        <sonar.projectName>klass</sonar.projectName>

        <asciidoctor-version>2.2.4</asciidoctor-version>
        <commons-io-version>2.21.0</commons-io-version>
        <commons-lang3-version>3.20.0</commons-lang3-version>
        <guava-version>32.0.1-jre</guava-version>
        <jakarta-rs-api-version>3.1.0</jakarta-rs-api-version>
        <jaxb-api-version>4.0.4</jaxb-api-version>
        <maven-jaxb2-plugin-version>0.15.3</maven-jaxb2-plugin-version>
        <objenesis-version>2.4</objenesis-version>
        <rest-assured-version>5.5.6</rest-assured-version>
        <snakeyaml.version>2.5</snakeyaml.version>
        <solr-version>8.5.2</solr-version>
        <sonar.version>5.3.0.6276</sonar.version>
        <spring-restdocs-version>3.0.5</spring-restdocs-version>
        <testcontainers.version>1.20.1</testcontainers.version>
        <tomcat7-maven-plugin-version>2.2</tomcat7-maven-plugin-version>
        <woodstox-version>4.4.1</woodstox-version>
        <zonky.pg.version>2.7.0</zonky.pg.version>
        <zonky.version>2.2.0</zonky.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.rest-assured</groupId>
                <artifactId>rest-assured</artifactId>
                <version>${rest-assured-version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>io.zonky.test</groupId>
                <artifactId>embedded-postgres</artifactId>
                <version>${zonky.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>io.zonky.test</groupId>
                <artifactId>embedded-database-spring-test</artifactId>
                <version>${zonky.pg.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3-version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/${github.repository}</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </distributionManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.sonarsource.scanner.maven</groupId>
                    <artifactId>sonar-maven-plugin</artifactId>
                    <version>${sonar.version}</version>
                </plugin>
                <plugin>
                    <groupId>com.spotify.fmt</groupId>
                    <artifactId>fmt-maven-plugin</artifactId>
                    <version>2.29</version>
                    <configuration>
                        <!-- Use this for better backwards compatibility -->
                        <style>aosp</style>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>3.2.0</version>
                    <configuration>
                        <releaseProfiles>documentation</releaseProfiles>
                        <autoVersionSubmodules>true</autoVersionSubmodules>
                        <tagNameFormat>v@{project.version}</tagNameFormat>
                        <!--TODO find a solution for the javadoc error on generated sources-->
                        <arguments>-Pdocumentation -Dmaven.javadoc.skip=true -pl :klass-api -am</arguments>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>3.1.4</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
